fix: 升级为蒲公英 API 2.0，修复无法上传 apk 的问题

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'signing'
 
 group = 'org.quanqi'
 archivesBaseName = 'pgyer'
-version = '0.1.2'
+version = '0.2'
 sourceCompatibility = 1.6
 
 repositories {
@@ -40,13 +40,13 @@ artifacts {
 
 // local upload
 
-//uploadArchives {
-//  repositories {
-//    mavenDeployer {
-//      repository(url: 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath)
-//    }
-//  }
-//}
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      repository(url: 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath)
+    }
+  }
+}
 
 
 signing {
@@ -54,59 +54,59 @@ signing {
     sign configurations.archives
 }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-
-            beforeDeployment { deployment -> signing.signPom(deployment) }
-
-            if (project.hasProperty('NEXUS_USERNAME')) {
-                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-                    authentication(userName: project.getProperty('NEXUS_USERNAME'),
-                            password: project.getProperty('NEXUS_PASSWORD'))
-                }
-
-                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
-                    authentication(userName: project.getProperty('NEXUS_USERNAME'),
-                            password: project.getProperty('NEXUS_PASSWORD'))
-                }
-            }
-            uniqueVersion = false
-
-            pom.project {
-
-                parent {
-                    groupId 'org.sonatype.oss'
-                    artifactId 'oss-parent'
-                    version '7'
-                }
-
-                name 'Gradle Pugongying Upload Plugin'
-                packaging 'jar'
-                description 'A plugin used for upload Pugongying apk.'
-                url 'https://github.com/dodocat/gradle-pgyer-plugin'
-
-                scm {
-                    url 'https://github.com/dodocat/gradle-pgyer-plugin'
-                    connection 'scm:git:https://github.com/dodocat/gradle-pgyer-plugin.git'
-                    developerConnection 'scm:git:https://github.com/dodocat/gradle-pgyer-plugin.git'
-                }
-
-                licenses {
-                    license {
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                        distribution 'repo'
-                    }
-                }
-
-                developers {
-                    developer {
-                        id 'dodocat'
-                        name 'Cindy'
-                    }
-                }
-            }
-        }
-    }
-}
+//uploadArchives {
+//    repositories {
+//        mavenDeployer {
+//
+//            beforeDeployment { deployment -> signing.signPom(deployment) }
+//
+//            if (project.hasProperty('NEXUS_USERNAME')) {
+//                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+//                    authentication(userName: project.getProperty('NEXUS_USERNAME'),
+//                            password: project.getProperty('NEXUS_PASSWORD'))
+//                }
+//
+//                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+//                    authentication(userName: project.getProperty('NEXUS_USERNAME'),
+//                            password: project.getProperty('NEXUS_PASSWORD'))
+//                }
+//            }
+//            uniqueVersion = false
+//
+//            pom.project {
+//
+//                parent {
+//                    groupId 'org.sonatype.oss'
+//                    artifactId 'oss-parent'
+//                    version '7'
+//                }
+//
+//                name 'Gradle Pugongying Upload Plugin'
+//                packaging 'jar'
+//                description 'A plugin used for upload Pugongying apk.'
+//                url 'https://github.com/dodocat/gradle-pgyer-plugin'
+//
+//                scm {
+//                    url 'https://github.com/dodocat/gradle-pgyer-plugin'
+//                    connection 'scm:git:https://github.com/dodocat/gradle-pgyer-plugin.git'
+//                    developerConnection 'scm:git:https://github.com/dodocat/gradle-pgyer-plugin.git'
+//                }
+//
+//                licenses {
+//                    license {
+//                        name 'The Apache Software License, Version 2.0'
+//                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//                        distribution 'repo'
+//                    }
+//                }
+//
+//                developers {
+//                    developer {
+//                        id 'dodocat'
+//                        name 'Cindy'
+//                    }
+//                }
+//            }
+//        }
+//    }
+//}
